--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,55 +4,78 @@
   "description": "Plataforma de treinos HIIT personalizados com acesso exclusivo para membros",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#1a1a1a",
-  "theme_color": "#FF4500",
+  "background_color": "#111827",
+  "theme_color": "#111827",
   "orientation": "portrait-primary",
   "scope": "/",
   "lang": "pt-BR",
-  "categories": ["fitness", "health", "lifestyle"],
+  "categories": ["fitness", "health", "sports"],
   "icons": [
     {
-      "src": "/team-hiit-icon.png",
+      "src": "/icone%20team%20hiit.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/team-hiit-icon.png",
+      "src": "/icone%20team%20hiit.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/team-hiit-icon.png",
+      "src": "/icone%20team%20hiit.png",
       "sizes": "180x180",
-      "type": "image/png"
-    }
-  ],
-  "shortcuts": [
-    {
-      "name": "Dashboard",
-      "short_name": "Dashboard",
-      "description": "Acesso rápido ao dashboard principal",
-      "url": "/dashboard",
-      "icons": [
-        {
-          "src": "/team-hiit-icon.png",
-          "sizes": "192x192"
-        }
-      ]
+      "type": "image/png",
+      "purpose": "any"
     },
     {
-      "name": "Meus Treinos",
-      "short_name": "Treinos",
-      "description": "Acesso aos seus treinos favoritos",
-      "url": "/dashboard#treinos",
-      "icons": [
-        {
-          "src": "/team-hiit-icon.png",
-          "sizes": "192x192"
-        }
-      ]
+      "src": "/icone%20team%20hiit.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icone%20team%20hiit.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icone%20team%20hiit.png",
+      "sizes": "120x120",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icone%20team%20hiit.png",
+      "sizes": "114x114",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icone%20team%20hiit.png",
+      "sizes": "76x76",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icone%20team%20hiit.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icone%20team%20hiit.png",
+      "sizes": "60x60",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icone%20team%20hiit.png",
+      "sizes": "57x57",
+      "type": "image/png",
+      "purpose": "any"
     }
   ]
 }
